
2012-09-07  Christopher Michael

       * Fix ecore_x_randr to actually return outputs properly.

2012-09-08  Vincent Torri

       * Fix readlink usage in ecore_file.

2012-09-12  Jihoon Kim (jihoon)

       * Add ECORE_IMF_PREEDIT_TYPE_SUB4~7 style.

2012-09-10  Christopher Michael

       * Fix ecore_x_randr to actually return crtcs properly.

2012-09-11  Christopher Michael

       * Fix ecore_x_randr to actually return crtcs possible outputs properly.
       * Fix ecore_x_randr to actually return crtcs outputs properly.

2012-09-13  Mike Blumenkrantz

       * Return -1 for ecore_con_server_fd_get() in the case that the server has already been deleted

2012-09-13  Carsten Haitzler (The Rasterman)

       * Fix ecore-evas rotation handling for canvases that shows up
       only on some drivers and GL implementations.

2012-09-14  Doyoun Kang

       * Add string to atom_items for ECORE_X_ATOM_E_ILLUME_WINDOW_STATE, 
       ECORE_X_ATOM_E_ILLUME_WINDOW_STATE_NORMAL, ECORE_X_ATOM_E_ILLUME_WINDOW_STATE_FLOATING

2012-09-18  Patryk Kaczmarek

       * Fix escaping in ecore_file_escape_name() to handle tab and
       newline right.

2012-09-21  Carsten Haitzler (The Rasterman)

       * Fix ecore_x_image_is_argb32_get() to return correctly on
       endianess.

2012-09-21  Christopher Michael

       * Fix ecore_x_randr to properly return output modes from
       ecore_x_randr_output_modes_get().

2012-09-27  Carsten Haitzler (The Rasterman)

       * Fix ecore_imf buf in the ibus module where it may segv
       accessing a wrong context handle.

2012-10-02  Daniel Willmann

       * Fix memory allocation size in ecore_thread_feedback()

2012-10-03  Daniel Wilmann
       * Fix memory allocation size in ecore_x xcb randr function

2012-10-04  Cedric Bail

	* Add ecore_x_input_raw_select and ECORE_X_RAW_*.

2012-10-04  Sebastian Dransfeld

	* Expose ecore_x_selection_converter_text

2012-10-05  Cedric Bail

	* Properly reschedule call to curl.